tests/should_succeed/if.jou
cdecl putchar(ch: int) -> int

def main() -> int:
    if True:
        putchar('a')  # Output: a
    if False:
        putchar('b')
    putchar('\n')
    return 0
