tests/syntax_error/question_not_ternary.jou
def main() -> int:
    x = ?  # Error: operator '?' is not supported
